<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/logo" />

        <TextView
            android:id="@+id/tv_splash_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            android:text="@string/app_summary"
            android:textColor="@color/color_666"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_splash_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/color_666"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_splash_version_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_code"
            android:textColor="@color/color_666"
            android:textSize="12sp" />

    </LinearLayout>


</android.widget.RelativeLayout>